2001-04-10  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/net-worth-timeseries.scm: New file.  You guessed
	it,  a time series net worth barchart.

	* src/scm/report/date-utilities.scm: add gnc:dateloop-simple to
	generate simple timeseries for net worth barchart.

	* src/scm/report/{Makefile.am, report-list.scm}: add new barchart.

2001-04-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-sheet.scm (balance-sheet-renderer):
	use gnc:decompose-accounts to split up accounts.

	* src/scm/report-utilities.scm (gnc:decompose-accountlist):
	add credit accounts to the list of liability accounts.

2001-04-08  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: more work

	* src/gnome/account-tree.c (gnc_account_tree_insert_row): speedup
	refreshing

	* src/gnome/account-tree.h: remove duplicate declaration

	* src/scm/report/taxtxf.scm: don't use deprecated calls

	* src/guile/gnc.gwp: wrap xaccAccountGetSplitList

	* src/engine/Query-xml-parser-v1.c
	(qrestore_datepred_start_handler): use g_new0 instead of bzero --
	more portable

2001-04-07  Dave Peticolas  <dave@krondo.com>

	* src/engine/md5.h: include stddef.h for size_t

	* src/engine/sql/PostgresBackend.c: include ctype.h for tolower

	* src/engine/guid.h: include stddef.h for size_t

	* src/engine/gnc-engine-util.h: include stddef.h for size_t

	* src/scm/report/taxtxf.scm: fix bug

	* src/scm/text-export.scm: fix for api change

	* src/scm/report-utilities.scm: fix for api change

	* src/scm/engine-utilities.scm: change gnc:group-map-accounts
	to gnc:group-map-all-accounts. make gnc:group-map-accounts do
	only the immediate children.

	* src/gnome/dialog-price-editor.c: more work

	* src/engine/gnc-pricedb.c: add an error check

	* ChangeLog: split changelog

2001-04-06  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/process.scm (gnc:run-sub-process): some process control
	fixes seen on guile-devel.	

2001-04-06  Dave Peticolas  <dave@krondo.com>
